feat: publish WishCreatedEvent in WishService after saving new wish