@@ -2,37 +2,41 @@ package com.pickme.service;
 
 import com.pickme.dto.wish.WishCreateRequest;
 import com.pickme.dto.wish.WishUpdateRequest;
+import com.pickme.events.WishCreatedEvent;
 import com.pickme.mapper.WishMapper;
 import com.pickme.model.Wish;
 import com.pickme.model.WishList;
 import com.pickme.repository.WishListRepository;
 import com.pickme.repository.WishRepository;
 import jakarta.persistence.EntityNotFoundException;
+import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 
 @Service
+@AllArgsConstructor(onConstructor = @__(@Autowired))
 public class WishService {
 
     private final WishRepository wishRepository;
     private final WishListRepository wishListRepository;
     private final WishMapper wishMapper;
-
-    @Autowired
-    public WishService(WishRepository wishRepository, WishListRepository wishListRepository, WishMapper wishMapper) {
-        this.wishRepository = wishRepository;
-        this.wishListRepository = wishListRepository;
-        this.wishMapper = wishMapper;
-    }
+    private final ApplicationEventPublisher applicationEventPublisher;
 
     public Wish createWish(Long wishListId, WishCreateRequest dto) {
         WishList wishList = wishListRepository.findById(wishListId)
                 .orElseThrow(() -> new EntityNotFoundException("WishList not found with id: " + wishListId));
         Wish wish = wishMapper.mapFromCreateRequest(dto, wishList);
-        return wishRepository.save(wish);
+        Wish savedWish = wishRepository.save(wish);
+
+        Long userId = wishList.getUser().getId();
+        String wishTitle = wish.getTitle();
+
+        applicationEventPublisher.publishEvent(new WishCreatedEvent(userId, wishListId, wishTitle));
+        return savedWish;
     }
 
     public List<Wish> findByWishListId(Long wishListId) {
@@ -66,7 +70,7 @@ public class WishService {
         if (wishes.isEmpty()) {
             throw new EntityNotFoundException("Wish not found with id " + wishListId);
         }
-        return wishes.get(0);
+        return wishes.getFirst();
     }
 
     public Wish getNewestWish(Long wishListId) {
@@ -74,7 +78,7 @@ public class WishService {
         if (wishes.isEmpty()) {
             throw new EntityNotFoundException("Wish not found with id " + wishListId);
         }
-        return wishes.get(0);
+        return wishes.getFirst();
     }
 
     public Wish createWishFromBook(Long wishListId, Wish wish) {
